--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,7 @@
 			<script src="{{ asset('js/resource.js') }}"></script>
 
 
-			{#  <script src="{{ asset('js/particles.js')}}"></script>#}
+			{#  <script src="{{ asset('js/pSubjects.js')}}"></script>#}
 			{#	<script src="{{ asset('js/app.js')}}"></script> #}
 
 
