--- a/templates/front/administrative/conditions.html.twig
+++ b/templates/front/administrative/conditions.html.twig
@@ -9,7 +9,7 @@
         <p class="lead text-center">En vigueur au 19/08/2023</p>
 
         <section>
-            <h2>Article 1 : L'objet</h2>
+            <h2>Subject 1 : L'objet</h2>
             <p>
                 Les présentes conditions générales d'utilisation (dites « CGU ») ont pour objet l'encadrement juridique
                 des modalités de mise à disposition du site et des services par <a href="https://scriptzenit.fr">scriptzenit.fr</a> et de définir
@@ -29,7 +29,7 @@
         </section>
 
         <section>
-            <h2>Article 2 : Mentions légales</h2>
+            <h2>Subject 2 : Mentions légales</h2>
             <p>Le site <a href="https://scriptzenit.fr">scriptzenit.fr</a> est édité par la société ScriptZenIT, domiciliée à 2 Les Buissons-cropigny, Chez Mr Stier Pascal.</p>
             <p>Numéro de téléphone est +33762972691 <br>
                 Adresse e-mail wbelbeche.s@gmail.com.
@@ -38,7 +38,7 @@
         </section>
 
         <section>
-            <h2>Article 3 : Accès au site</h2>
+            <h2>Subject 3 : Accès au site</h2>
             <p>Le site <a href="https://scriptzenit.fr">scriptzenit.fr</a> permet à l'Utilisateur un accès gratuit aux
                 services suivants : La création de compte, d'accéder à son espace personnel, la création de demande de
                 devis, d'avoir une assistance en ligne, la consultation des projets réalisés ou en cours, le
@@ -49,7 +49,7 @@
         </section>
 
         <section>
-            <h2>ARTICLE 4 : Propriété intellectuelle</h2>
+            <h2>Subject 4 : Propriété intellectuelle</h2>
             <p>Les marques, logos, signes ainsi que tous les contenus du site (textes, images, son…) font l'objet
                 d'une protection par le Code de la propriété intellectuelle et plus particulièrement par le droit d'auteur.
                 La marque ScriptZenIT est une marque déposée par BELBECHE Walid. Toute représentation
@@ -61,14 +61,14 @@
                 est strictement interdite.
                 Toute représentation totale ou partielle de ce site par quelque procédé que ce soit, sans
                 l’autorisation expresse de l’exploitant du site Internet constituerait une contrefaçon
-                sanctionnée par l’article L 335-2 et suivants du Code de la propriété intellectuelle.
-                Il est rappelé conformément à l’article L122-5 du Code de propriété intellectuelle que
+                sanctionnée par l’Subject L 335-2 et suivants du Code de la propriété intellectuelle.
+                Il est rappelé conformément à l’Subject L122-5 du Code de propriété intellectuelle que
                 l’Utilisateur qui reproduit, copie ou publie le contenu protégé doit citer l’auteur et sa source.
             </p>
         </section>
 
         <section>
-            <h2>ARTICLE 5 : Responsabilité</h2>
+            <h2>Subject 5 : Responsabilité</h2>
             <p>Les sources des informations diffusées sur le site https://scriptzenit.fr sont réputées fiables, mais le
                 site ne garantit pas qu’il soit exempt de défauts, d’erreurs ou d’omissions.
 
@@ -89,7 +89,7 @@
         </section>
 
         <section>
-            <h2>ARTICLE 6 : Liens hypertextes</h2>
+            <h2>Subject 6 : Liens hypertextes</h2>
             <p>Des liens hypertextes peuvent être présents sur le site. L’Utilisateur est informé qu’en cliquant
                 sur ces liens, il sortira du site https://scriptzenit.fr. Ce dernier n’a pas de contrôle sur les
                 pages web sur lesquelles aboutissent ces liens et ne saurait, en aucun cas, être responsable de
@@ -98,7 +98,7 @@
         </section>
 
         <section>
-            <h2>ARTICLE 7 : Cookies</h2>
+            <h2>Subject 7 : Cookies</h2>
             <p>L’Utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement
                 sur son logiciel de navigation.
 
@@ -122,7 +122,7 @@
         </section>
 
         <section>
-            <h2>ARTICLE 8 : Publication par l’Utilisateur</h2>
+            <h2>Subject 8 : Publication par l’Utilisateur</h2>
             <p>Le site permet aux membres de publier les contenus suivants :
                 Création de devis, création de tickets, répondre aux tickets.
                 Dans ses publications, le membre s’engage à respecter les règles de la Netiquette
@@ -146,11 +146,11 @@
         </section>
 
         <section>
-            <h2>ARTICLE 9 : Droit applicable et juridiction compétente</h2>
+            <h2>Subject 9 : Droit applicable et juridiction compétente</h2>
             <p>La législation française s'applique au présent contrat. En cas d'absence de résolution amiable d'un
                 litige né entre les parties, les tribunaux français seront seuls compétents pour en connaître.
                 Pour toute question relative à l’application des présentes CGU, vous pouvez joindre l’éditeur aux
-                coordonnées inscrites à l’ARTICLE 1.
+                coordonnées inscrites à l’Subject 1.
             </p>
         </section>
 
