--- a/templates/front/category/home.html.twig
+++ b/templates/front/category/home.html.twig
@@ -10,44 +10,44 @@
         <section class="blog-area pb-5">
             <div class="container">
                 <div class="row justify-content-center">
-                    {% for article in articles %}
+                    {% for Subject in Subjects %}
                         <div class="col-lg-3 col-md-3 col-sm-10">
                             <div class="single-blog blog-style-one">
                                 <div class="blog-image">
-                                    <a href="{{ path('front_articles_show', {'title': article.title}) }}">
-                                        {% for image in article.images %}
-                                            <img class="card-img-top rounded-0" src="{{ asset('uploads/' ~ image.name) }}" alt="{{ article.title }}">
+                                    <a href="{{ path('front_Subjects_show', {'title': Subject.title}) }}">
+                                        {% for image in Subject.images %}
+                                            <img class="card-img-top rounded-0" src="{{ asset('uploads/' ~ image.name) }}" alt="{{ Subject.title }}">
                                         {% endfor %}
                                     </a>
                                 </div>
                                 <div class="blog-content">
                                     <h5 class="blog-title">
-                                        <a href="{{ path('front_articles_show', {'title': article.title}) }}">
-                                            <h5 class="card-title">{{ article.title }}</h5>
+                                        <a href="{{ path('front_Subjects_show', {'title': Subject.title}) }}">
+                                            <h5 class="card-title">{{ Subject.title }}</h5>
                                         </a>
                                     </h5>
-                                    {% for categorie in article.categories %}
+                                    {% for categorie in Subject.categories %}
                                         {{ categorie.name }}
                                     {% endfor %}
                                     <br>
-                                    <span><i class="bi bi-calendar"></i> {{ article.createdAt|format_datetime('medium', locale="fr") }}</span>
-                                    <span><i class="bi bi-chat-dots"></i>{{ article.commentaires|length }}</span>
-                                    {# <span class="favoris"><i class="bi bi-heart-fill"></i>{{ article.favoris|length }}</span> #}
-                                    <span><img src="{{ asset('uploads/avatar/' ~article.user.avatar) }}" alt="{{ article.user.username }}" class="rounded-0 img-thumbnail" width="50" height="50">  {{ article.user.username }}</span>
+                                    <span><i class="bi bi-calendar"></i> {{ Subject.createdAt|format_datetime('medium', locale="fr") }}</span>
+                                    <span><i class="bi bi-chat-dots"></i>{{ Subject.commentaires|length }}</span>
+                                    {# <span class="favoris"><i class="bi bi-heart-fill"></i>{{ Subject.favoris|length }}</span> #}
+                                    <span><img src="{{ asset('uploads/avatar/' ~Subject.user.avatar) }}" alt="{{ Subject.user.username }}" class="rounded-0 img-thumbnail" width="50" height="50">  {{ Subject.user.username }}</span>
                                 </div>
                                 {# <div class="txt-red">
                                     {% if app.user %}
                                         {% set isFavorite = false %}
-                                        {% for favoris in article.favoris %}
+                                        {% for favoris in Subject.favoris %}
                                             {% if favoris.id == app.user.id %}
                                                 {% set isFavorite = true %}
                                             {% endif %}
                                         {% endfor %}
                                         {% if isFavorite %}
-                                            <button class="btn-favorite" type="button" data-href="{{ url('front_remove_favoris', {id: article.id}) }}" data-id="{{ article.id }}"><i class="bi bi-hand-thumbs-up-fill"></i>
+                                            <button class="btn-favorite" type="button" data-href="{{ url('front_remove_favoris', {id: Subject.id}) }}" data-id="{{ Subject.id }}"><i class="bi bi-hand-thumbs-up-fill"></i>
                                             </button>
                                         {% else %}
-                                            <button class="btn-favorite" type="button" data-href="{{ url('front_add_favoris', {id: article.id}) }}" data-id="{{ article.id }}"><i class="bi bi-hand-thumbs-up"></i>
+                                            <button class="btn-favorite" type="button" data-href="{{ url('front_add_favoris', {id: Subject.id}) }}" data-id="{{ Subject.id }}"><i class="bi bi-hand-thumbs-up"></i>
                                             </button>
                                         {% endif %}
 
