--- a/templates/front/devis/new.html.twig
+++ b/templates/front/devis/new.html.twig
@@ -54,10 +54,10 @@
 						<h5>Types de Sites Web:</h5>
 						<p><strong>Site vitrine:</strong> Idéal pour les entreprises qui veulent présenter leurs produits ou services, mais sans vendre en ligne.</p>
 						<p><strong>E-Commerce:</strong> Pour les entreprises qui veulent vendre des produits ou des services en ligne.</p>
-						<p><strong>Blog professionnel:</strong> Pour les entreprises ou les individus qui souhaitent partager des articles, des actualités et des informations pertinentes.</p>
+						<p><strong>Blog professionnel:</strong> Pour les entreprises ou les individus qui souhaitent partager des Subjects, des actualités et des informations pertinentes.</p>
 						<p><strong>Portfolio:</strong> Idéal pour les artistes, photographes, designers, etc., qui souhaitent montrer leur travail.</p>
 						<p><strong>Forum communautaire:</strong> Pour créer une communauté en ligne centrée autour d'un sujet ou d'un intérêt commun.</p>
-						<p><strong>Site d'information ou magazine en ligne:</strong> Pour les entreprises de médias ou les individus qui partagent des actualités et des articles fréquemment.</p>
+						<p><strong>Site d'information ou magazine en ligne:</strong> Pour les entreprises de médias ou les individus qui partagent des actualités et des Subjects fréquemment.</p>
 						<p><strong>Application Web et Mobile (Cross-plateforme):</strong> Des applications qui fonctionnent à la fois sur le web et les mobiles.</p>
 						<p><strong>Système de Gestion de Contenu (CMS):</strong> Pour les entreprises qui ont besoin d'un système robuste pour gérer beaucoup de contenu.</p>
 						<p><strong>Intranet d'entreprise:</strong> Pour les besoins internes de l'entreprise, comme la gestion des ressources humaines, des projets, etc.</p>
