--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -103,28 +103,28 @@
 							<i class="fas fa-lightbulb"></i>
 						</span>
 						<span class="process__title">Analyse &amp; Stratégie</span>
-						<span class="process__subtitle">Nous analysons vos problèmes et développons des stratégies</span>
+						<span class="process__subtitle text-justify">Nous analysons vos problèmes et développons des stratégies</span>
 					</li>
 					<li class="process__item">
 						<span class="process__number">
 							<i class="fas fa-file-alt"></i>
 						</span>
 						<span class="process__title">Offre</span>
-						<span class="process__subtitle">Nous fournissons des offres détaillées en fonction de nos analyses</span>
+						<span class="process__subtitle text-justify">Nous fournissons des offres détaillées en fonction de nos analyses</span>
 					</li>
 					<li class="process__item">
 						<span class="process__number">
 							<i class="fas fa-cogs"></i>
 						</span>
 						<span class="process__title">Développement</span>
-						<span class="process__subtitle">Nous développons et transformons les stratégies en réalité</span>
+						<span class="process__subtitle text-justify">Nous développons et transformons les stratégies en réalité</span>
 					</li>
 					<li class="process__item">
 						<span class="process__number">
 							<i class="fas fa-check-circle"></i>
 						</span>
 						<span class="process__title">Finalisation</span>
-						<span class="process__subtitle">Nous effectuons les ajustements finaux et préparons les livraisons</span>
+						<span class="process__subtitle text-justify">Nous effectuons les ajustements finaux et préparons les livraisons</span>
 					</li>
 				</ul>
 			</div>
@@ -177,7 +177,7 @@
 							</div>
 							<div class="feature-content">
 								<h5>Simplicité</h5>
-								<p>Nous simplifions votre présence en ligne, offrant des solutions intuitives qui facilitent l'interaction avec vos clients.</p>
+								<p class="text-justify">Nous simplifions votre présence en ligne, offrant des solutions intuitives qui facilitent l'interaction avec vos clients.</p>
 							</div>
 						</div>
 					</div>
@@ -385,7 +385,7 @@
 
 			<div class="thank-you">
 				<h2>Merci d'avoir visité notre site !</h2>
-				<p class="text-justify">Nous apprécions votre visite. Si vous avez des questions, des commentaires ou avez besoin de plus d'informations, n'hésitez pas à nous contacter.</p>
+				<p>Nous apprécions votre visite. Si vous avez des questions, des commentaires ou avez besoin de plus d'informations, n'hésitez pas à nous contacter.</p>
 				<a href="{{ url('front_contact') }}" class="btn btn-primary">Nous contacter</a>
 				<!-- Avis Google -->
 				<div class="text-center">
