--- a/templates/front/profil/profil_subject.html.twig
+++ b/templates/front/profil/profil_subject.html.twig
@@ -60,12 +60,12 @@
 
     <div class="container">
         <div id="my_subject">
-            <h1>Sujet de {{ app.user.username }} ({{ app.user.articles|length }})</h1>
+            <h1>Sujet de {{ app.user.username }} ({{ app.user.Subjects|length }})</h1>
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-xs-1">Titre : </div>
-                    {% for article in app.user.articles %}
-                        <div class="col-xs-3"><a href="{{ article.title }}">{{ article.title }}</a> <div class="col-xs-3"><img src="{{ asset('/uploads/avatar/'~app.user.avatar) }}" width="35" height="35" class="rounded-circle me-3 border border-width-3 border-white" alt="{{ app.user.username }}" width="120" height="120">
+                    {% for Subject in app.user.Subjects %}
+                        <div class="col-xs-3"><a href="{{ Subject.title }}">{{ Subject.title }}</a> <div class="col-xs-3"><img src="{{ asset('/uploads/avatar/'~app.user.avatar) }}" width="35" height="35" class="rounded-circle me-3 border border-width-3 border-white" alt="{{ app.user.username }}" width="120" height="120">
                             </div></div>
                     {% endfor %}
                 </div>
