--- a/templates/back/includes/nav.html.twig
+++ b/templates/back/includes/nav.html.twig
@@ -41,7 +41,7 @@
 				</li>
 
 				<li class="menu-item">
-					<a href="{{ url('back_articles_list') }}">Article support</a>
+					<a href="{{ url('back_Subjects_list') }}">Subject support</a>
 				</li>
 
 				<li class="menu-item">
